
  [ Mihai Moldovan ]
  * New upstream release (4.0.5.1):
    - onmainwindow.cpp: include sshd PID file path option in quotes to support
      whitespaces within the var directory path on Windows. Add comment to
      revisit this later on non-Windows-platforms, too. Fixes: #916.

  [ Oleksandr Shneyder ]
  * New upstream release (4.0.5.1):
    - xsettingswidget: compile only on Windows.

 -- X2Go Release Manager <git-admin@x2go.org>  Tue, 28 Jul 2015 06:05:27 +0200

x2goclient (4.0.5.0-0x2go1) unstable; urgency=low

  [ Mihai Moldovan ]
  * New upstream release (4.0.5.0):
    - INSTALL: add more verbose instructions on how to build X2Go Client and
      friends.
    - onmainwindow.{cpp,h}: rename slotScDaemonOut() and slotScDaemonError()
      to slotScDaemonStdOut() and slotScDaemonStdErr(). I will need
      slotScDaemonError() later and the previous names were a bit of a
      misnomer.
    - x2goutils.{cpp,h}: add new show_RichText_Generic_MsgBox() main function
      designed to replace the show_RichText_WarningMsgBox() function.
    - x2goutils.{cpp,h}: make show_RichText_WarningMsgBox() use
      show_RichText_Generic_MsgBox ().
    - x2goutils.{cpp,h}: new show_RichText_ErrorMsgBox() function as a wrapper
      for show_RichText_Generic_MsgBox() with a critical icon.
    - onmainwindow.{cpp,h}: properly handle scdaemon errors with a message box
      and close the client.
    - onmainwindow.cpp: manipulate PATH and append /usr/lib/gnupg2/ to it when
      starting scdaemon. Fixes: #882.
    - x2goutils.h: add QMessageBox include, fixed compile error.
    - onmainwindow.cpp: fix typos leading to compile errors.
    - onmainwindow.cpp: add blocks to switch cases to fix a compile error.
      Also correctly append to informative_text on one occasion, instead of
      overwriting it.
    - x2goutils.cpp: correct typo to fix compile errors.
    - onmainwindow.cpp: drop a redundant variable and fix empty env check.