@@ -9,6 +9,8 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
     - xsettingswidget: compile only on Windows.
+    - Add support for new style command line options of xfreerdp on direct RDP
+      connections.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Tue, 28 Jul 2015 06:05:27 +0200
 
